--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: go mod download
 
     - name: Test
-      run: go test -v -coverprofile=coverage.txt ./...
+      run: go test -v -race -coverprofile=coverage.txt ./...
 
     - name: Upload Coverage
       uses: codecov/codecov-action@v1
